--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-replace": "^5.0.1",
     "@sveltejs/vite-plugin-svelte": "^1.0.2",
+    "dotenv": "^16.0.3",
+    "rollup": "^3.4.0",
+    "rollup-plugin-svelte": "^7.1.0",
     "svelte": "^3.49.0",
     "vite": "^3.1.0"
   },
